[package]
name = "classreader"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = { version = "2.3.3", features = ["serde"] }
nom = "7.1.3"
prost = "0.11.9"
robusta_jni = "0.2.1"
serde = { version = "1.0.175", features = ["derive"] }
serde_json = "1.0.103"
walkdir = "2.3.3"
zip = "0.6.6"

[build-dependencies]
prost-build = "0.11.9"
